--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 			<!-- Banner -->
 				<section id="banner">
 					<h2>MARSHMALLOW CANNON</h2>
-					<p>Another fine responsive site template freebie by HTML5 UP.</p>
+					<p>Innovating your snack consumption.</p>
 					<ul class="actions">
-						<li><a href="#" class="button special">Sign Up</a></li>
-						<li><a href="#" class="button">Learn More</a></li>
+						<li><a href="#" class="button special">I NEED IT!</a></li>
+						<li><a href="#" class="button">Tell Me More...</a></li>
 					</ul>
 				</section>
 
@@ -59,9 +59,9 @@
 
 					<section class="box special">
 						<header class="major">
-							<h2>Introducing the ultimate mobile app
+							<h2>Introducing the ultimate way to
 							<br />
-							for doing stuff with your phone</h2>
+							eat snacks and fire marshmallows.</h2>
 							<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
 							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
 						</header>
