--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 							<h2>Introducing the ultimate way to
 							<br />
 							eat snacks and fire marshmallows.</h2>
-							<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
-							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
+							<p>The <b>marshmallow cannon<b/> is the ultimate face tracking automated snack <br />
+							firing gun. Shoot your friends, shoot yourself, shoot your cravings.</p>
 						</header>
 						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
 					</section>
