Added content, updated images.
adding content to information section. links at top now link to info and
sign up. Images added to info section.

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 					<h2>MARSHMALLOW CANNON</h2>
 					<p>Innovating your snack consumption.</p>
 					<ul class="actions">
-						<li><a href="#" class="button special">I NEED IT!</a></li>
-						<li><a href="#" class="button">Tell Me More...</a></li>
+						<li><a href="#signup" class="button special">I NEED IT!</a></li>
+						<li><a href="#info" class="button">Tell Me More...</a></li>
 					</ul>
 				</section>
 
@@ -68,69 +68,40 @@
 						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
 					</section>
 
-					<section class="box special features">
+					<section id="info" class="box special features">
 						<div class="features-row">
 							<section>
-								<span class="icon major fa-bolt accent2"></span>
-								<h3>Magna etiam</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<span class="icon"><img src="images/icon01.png"/></span>
+								<h3>Facial Tracking</h3>
+								<p>Snack Attack can track your face to shoot you accurately from accross the room.</p>
 							</section>
 							<section>
-								<span class="icon major fa-area-chart accent3"></span>
-								<h3>Ipsum dolor</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<span class="icon"><img src="images/icon02.png"/></span>
+								<h3>Dynamic Aiming</h3>
+								<p>Snack Attack aims directly for you with a simple command. Snacks can attack you at a distance.</p>
 							</section>
 						</div>
 						<div class="features-row">
 							<section>
-								<span class="icon major fa-cloud accent4"></span>
-								<h3>Sed feugiat</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<span class="icon"><img src="images/icon03.png"/></span>
+								<h3>Target Your Cravings</h3>
+								<p>Want to satisfy that craving without getting up? Want to satisfy the craving of shooting your friends with delicious snacks? Look no further, Snack Attack is here to help.</p>
 							</section>
 							<section>
-								<span class="icon major fa-lock accent5"></span>
-								<h3>Enim phasellus</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<span class="icon"><img src="images/icon04.png"/></span>
+								<h3>Delicious Snacks</h3>
+								<p>Use various kinds of delicious snack. Our personal favourite is marshmallows =D</p>
 							</section>
 						</div>
 					</section>
-
-					<div class="row">
-						<div class="6u 12u(narrower)">
-
-							<section class="box special">
-								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-								<h3>Sed lorem adipiscing</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-								<ul class="actions">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul>
-							</section>
-
-						</div>
-						<div class="6u 12u(narrower)">
-
-							<section class="box special">
-								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
-								<h3>Accumsan integer</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-								<ul class="actions">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul>
-							</section>
-
-						</div>
-					</div>
-
 				</section>
 
 			<!-- CTA -->
 				<section id="cta">
-
 					<h2>Sign up for beta access</h2>
 					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
 
-					<form>
+					<form id="signup">
 						<div class="row uniform 50%">
 							<div class="8u 12u(mobilep)">
 								<input type="email" name="email" id="email" placeholder="Email Address" />
