--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Alpha by HTML5 UP</title>
+		<title>Snack Attack by Buzzwords</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,11 +18,11 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
+					<h1><a href="index.html">Snack Attack</a> by Buzzwords</h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li>
+							<!--<li>
 								<a href="#" class="icon fa-angle-down">Layouts</a>
 								<ul>
 									<li><a href="generic.html">Generic</a></li>
@@ -38,15 +38,15 @@
 										</ul>
 									</li>
 								</ul>
-							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
+							</li>-->
+							<li><a href="#signup" class="button">Sign Up</a></li>
 						</ul>
 					</nav>
 				</header>
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>MARSHMALLOW CANNON</h2>
+					<h2>Snack Attack</h2>
 					<p>Innovating your snack consumption.</p>
 					<ul class="actions">
 						<li><a href="#signup" class="button special">I NEED IT!</a></li>
@@ -98,8 +98,8 @@
 
 			<!-- CTA -->
 				<section id="cta">
-					<h2>Sign up for beta access</h2>
-					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
+					<h2>Sign up for early snack-cess</h2>
+					<p>Sign up here to get info via email about how to get your Snack Attack.</p>
 
 					<form id="signup">
 						<div class="row uniform 50%">
@@ -120,8 +120,6 @@
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 						<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 					</ul>
 					<ul class="copyright">
