--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Snack Attack by Buzzwords</title>
+		<title>SNACK ATTACK by Buzzwords</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,7 +18,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">Snack Attack</a> by Buzzwords</h1>
+					<h1><a href="index.html">SNACK ATTACK</a> by Buzzwords</h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -46,7 +46,7 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>Snack Attack</h2>
+					<h2>SNACK ATTACK</h2>
 					<p>Innovating your snack consumption.</p>
 					<ul class="actions">
 						<li><a href="#signup" class="button special">I NEED IT!</a></li>
@@ -78,7 +78,7 @@
 							<section>
 								<span class="icon"><img src="images/icon02.png"/></span>
 								<h3>Dynamic Aiming</h3>
-								<p>Snack Attack aims directly for you with a simple command. Snacks can attack you at a distance.</p>
+								<p>Snack Attack aims directly for you with a simple remote command. Snacks can attack you from a distance.</p>
 							</section>
 						</div>
 						<div class="features-row">
@@ -90,7 +90,7 @@
 							<section>
 								<span class="icon"><img src="images/icon04.png"/></span>
 								<h3>Delicious Snacks</h3>
-								<p>Use various kinds of delicious snack. Our personal favourite is marshmallows =D</p>
+								<p>Use various kinds of delicious snacks. Our personal favourite is marshmallows! =D</p>
 							</section>
 						</div>
 					</section>
