added marshmallow background
added marshmallow background

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 							<section>
 								<span class="icon"><img src="images/icon04.png"/></span>
 								<h3>Delicious Snacks</h3>
-								<p>Use various kinds of delicious snacks. Our personal favourite is marshmallows! =D</p>
+								<p>Use various kinds of delicious snacks. Our personal favourite is marshmallows!</p>
 							</section>
 						</div>
 					</section>
